src/test/ui/feature-gates/feature-gate-extern_absolute_paths.rs
use core::default; //~ ERROR unresolved import `core`

fn main() {
    let _: u8 = ::core::default::Default(); //~ ERROR failed to resolve
}
